--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.0.13",
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vue-tailwind": "^2.5.1"
