--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.13",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vue-tailwind": "^2.5.1"
